src/styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Anta';
}

.centered-text {
    color: #000000;
}

body {
    background: linear-gradient(to bottom, #ffbc9a, #f97316);
    background-size: auto;
    background-position: top center;
    background-repeat: repeat;
    color: #D9D9D9;
    font-size: 20px;
    line-height: 1.6;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

#root {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.header {
  background-color: #222; 
  padding: 5px 20px;
  color: #D9D9D9;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  border-bottom-left-radius: 50px;
  border-bottom-right-radius: 50px;
}

.header-logo {
    display: flex;
    align-items: center;
    gap: 10px;
    flex-shrink: wrap;
}

.site-title {
  color: #D9D9D9;
  font-size: 35px;
  font-weight: bold;
}

.footer {
  background-color: #222; 
  padding: 5px 20px;
  color: #D9D9D9;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-top-left-radius: 50px;
  border-top-right-radius: 50px;
  margin-top: auto;

}

nav {
    display: flex;
    gap: 20px;
    margin-right: 20px;
}

.nav-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 150px;
  height: 59px;
  color: #D9D9D9;
  background: #222;
  border-radius: 50px;
  font-size: 19px;
  font-weight: 700;
  cursor: pointer;
  border: 2px solid #f97316;
}

.nav-link:hover {
  background-color: #f97316;
}

.header-nav {
    display: flex;
    gap: 20px;
}

.page {
  display: flex;
  gap: 20px;
  padding: 20px;
  align-items: flex-start; 
}

.section_1 {
  background: #222;
  color: #D9D9D9;
  border-radius: 20px;
  padding: 20px;
  flex: 1;
  min-width: 300px;
}

.map {
  width: 100%;
  height: 500px;
  margin-top: 16px;
  border-radius: 20px;
  overflow: hidden;
}

.page form {
  margin: 0 auto;
  width:1000px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.page input {
  margin-top: 6px;
  margin-right: 6px;
  width: auto;
  min-width: 50px;
  margin-top: 2px;
  margin-right: 2px;
  max-width: 960px;
  padding: 15px;
  border-radius: 6px;
  border: none;
  color: #222;
}

.page button {
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: 160px;
    height: 59px;
    color: #D9D9D9;
    background: #222;
    border-radius: 50px;
    font-size: 19px;
    font-weight: 700;
    cursor: pointer;
    border: 2px solid #f97316;
    transition: background-color 0.3s ease, color 0.3s ease;
    margin-top: 6px;
}

.page button:hover {
  background-color: #f97316;
}

.logo-container {
    flex: 1;
    display: flex;
    justify-content: center;
}

.logo {
    max-width: 400px;
    height: auto;
}

.welcome-section {
    flex: 2;
    padding: 20px;
    text-align: left;
    color: white;
}

.welcome-section h1 {
    font-size: 2.5em;
    margin-bottom: 15px;
    color: white;
}

.welcome-section h2 {
    font-size: 2em;
    margin-bottom: 10px;
    color: white;
}

.welcome-section p {
    font-size: 1.1em;
    line-height: 1.6;
    margin-bottom: 15px;
}

@media (max-width: 768px) {
    .home-container {
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    .welcome-section {
        padding: 10px;
    }
}

.features-section {
    flex: 1 1 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 100px auto;
    margin-top: 0px;
    padding: 40px;
    background-color: #222;
    border-radius: 50px;
}

.feature h3 {
    font-size: 1.5em;
    color: #D9D9D9;
    margin-bottom: 10px;
}

.feature p {
    font-size: 1em;
    color: #D9D9D9;
    line-height: 1.5;
}

.feature {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 300px;
    padding: 10px;
    margin: 0 10px;
    text-align: center;
}
.feature img {
    max-width: 100%;
    margin-bottom: 15px;
    border: 4px solid #222;
    border-radius: 10px;
    transition: transform 0.3s ease, border-color 0.3s ease;
}

.feature img:hover {
    transform: scale(1.05);
    border-color: #f97316;
}

.home-container {
  display: flex;
  flex-wrap: wrap;            /* allows features to drop below */
  align-items: center;
  justify-content: center;
  gap: 40px;
  padding: 20px;
}

